[project]
name = "python-lib-demo"
version = "0.1"
description = "Following the best!"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Jason Devore"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/devoredevelops/python-lib-demo"
Changelog = "https://github.com/devoredevelops/python-lib-demo/releases"
Issues = "https://github.com/devoredevelops/python-lib-demo/issues"
CI = "https://github.com/devoredevelops/python-lib-demo/actions"


[project.optional-dependencies]
test = ["pytest"]
